Fixed issue where in Standard UI destiny drop down doesn't expand up when list options expands off screen. alpha-7

--- a/scss/components/_destiny_ui.scss
+++ b/scss/components/_destiny_ui.scss
@@ -43,6 +43,10 @@
     max-width: 50px;
     box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
     z-index: 1;
+
+    &.vertical {
+      margin-top : calc(-13vh + 40px);
+    }
   }
 
   /* Links inside the dropdown */
